[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/menus/player_info.gd" type="Script" id=1]
[ext_resource path="res://Asset/UI/KenneyBasePack/blue_boxCross_Plus.png" type="Texture" id=2]
[ext_resource path="res://Asset/UI/KenneyBasePack/box-mask.png" type="BitMap" id=3]
[ext_resource path="res://Asset/UI/KenneyBasePack/red_boxCross.png" type="Texture" id=4]
[ext_resource path="res://Asset/UI/KenneyBasePack/box.png" type="Texture" id=5]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-SemiBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Asset/PNG/Cars/car_blue_small_3.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=3]

size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 321.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="Add" type="TextureButton" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 38.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_click_mask = ExtResource( 3 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Remove" type="TextureButton" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 38.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="None" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 38.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Driver" type="LineEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 12.0
margin_right = 278.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "click to edit"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Car" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_right = 321.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[connection signal="button_up" from="Add" to="." method="_on_Add"]

[connection signal="button_up" from="Remove" to="." method="_on_Remove"]

[connection signal="text_changed" from="Driver" to="." method="_on_Driver_changed"]

[connection signal="text_entered" from="Driver" to="." method="_on_Driver_changed"]

[connection signal="button_up" from="Car" to="." method="_on_Car_pressed"]


